compiler/tools/fpp-check/test/enum_bad_default.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/enum_bad_default.fpp: 1.22
enum E { X } default 0
                     ^
error: cannot convert Integer to enum E
